apps-dev/jupyterhub/gitops/service/ingressrule.yaml
#apiVersion: traefik.io/v1alpha1
#kind: Middleware
#metadata:
#  name: strip-espsrcjupyter
#  namespace: espsrcjupyter
#spec:
#  stripPrefix:
#    prefixes:
#      - "/notebook"
#---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: espsrcjupyter-ingress
  namespace: espsrcjupyter
  #annotations:
  #  traefik.ingress.kubernetes.io/router.middlewares: espsrcjupyter-strip-espsrcjupyter@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: "dachs-service-00.iaa.csic.es"
      http:
        paths:
          - path: "/notebook"
            pathType: Prefix
            backend:
              service:
                name: proxy-public
                port:
                  number: 80
